--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,7 +1,9 @@
 <% if notice %>
   <p id="notice"><%= notice %></p>
 <% end %>
-  <h1 style="margin-left: 30px; margin-top: 10px;">Your Pragmatic Catalog</h1>
+
+<h1 class="header">Your Pragmatic Catalog</h1>
+
 <% @products.each do |product| %>
   <div class="entry">
     <div class="row">
