--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,7 @@
+<center>
+  <br><br><br><br><br><br>
 <h1>New product</h1>
 
 <%= render "form", product: @product %>
 
-<br>
-
-<div>
-  <%= link_to "Back to products", products_path %>
-</div>
+</center>
