--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,23 @@
     
   </head>
 
-  <body class='<%= controller.controller_name %>'>
-    <%= yield %>
+  <body class="<%= controller.controller_name %>">
+<div id="banner">
+<%= image_tag("logo.png", style: "width: 50px;")%>
+<%= @page_title || "Pragmatic Bookshelf" %>
+</div>
+<div id="columns">
+  <div id="side">
+<ul>
+<li><a href="http://www....">Home</a></li>
+<li><a href="http://www..../faq">Questions</a></li>
+<li><a href="http://www..../news">News</a></li>
+<li><a href="http://www..../contact">Contact</a></li>
+</ul>
+</div>
+<div id="main">
+<%= yield %>
+</div>
+</div>
   </body>
 </html>
