--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -14,7 +14,7 @@
         <h3><%= product.title %></h3>
         <%= sanitize(product.description) %>
         <div class="price_line">
-          <span class="price"><%= product.price %></span>
+          <span class="price"><p>Price: <%= product.price %></p> </span>
         </div>
       </div>
     </div>
