--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,20 @@
+/*
+* This is a manifest file that'll be compiled into application.css, which will
+* include all the files listed below.
+*
+* Any CSS and SCSS file within this directory, lib/assets/stylesheets,
+* vendor/assets/stylesheets, or vendor/assets/stylesheets of plugins, if any,
+* can be referenced here using a relative path.
+*
+* You're free to add application-wide styles to this file and they'll appear
+* at the top of the compiled file, but it's generally better to create a new
+* file per style scope.
+*
+*= require_self
+*= require_tree .
+*/
+
+
 .mage {
        padding:15px 8px 15px 25px; 
        width: 600px;}
@@ -18,3 +35,11 @@
 body{background: #F4F4F4;}
 html {overflow-x: hidden;}
 
+/* The sidebar menu */
+.sidenav {
+    
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+
+}
+
+/* The navigation menu links */
