--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,23 +14,71 @@
     
   </head>
 
+
   <body class="<%= controller.controller_name %>">
-<div id="banner">
-<%= image_tag("logo.png", style: "width: 50px;")%>
-<%= @page_title || "Pragmatic Bookshelf" %>
-</div>
-<div id="columns">
-  <div id="side">
-<ul>
-<li><a href="http://www....">Home</a></li>
-<li><a href="http://www..../faq">Questions</a></li>
-<li><a href="http://www..../news">News</a></li>
-<li><a href="http://www..../contact">Contact</a></li>
-</ul>
-</div>
-<div id="main">
-<%= yield %>
-</div>
-</div>
+    <div class="row">
+
+      <div >
+
+      <div class="d-flex flex-column flex-shrink-0 p-3 bg-light sidenav" style="width: 280px; height: 100%;">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+        <span class="fs-4"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Боковая панель</font></font></span>
+      </a>
+      <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item">
+          <a href="#" class="nav-link active" aria-current="page">
+            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#home"></use></svg><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+            Дом
+          </font></font></a>
+        </li>
+        <li>
+          <a href="#" class="nav-link link-dark">
+            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+            Приборная доска
+          </font></font></a>
+        </li>
+        <li>
+          <a href="#" class="nav-link link-dark">
+            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+            Заказы
+          </font></font></a>
+        </li>
+        <li>
+          <a href="#" class="nav-link link-dark">
+            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#grid"></use></svg><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+            Товары
+          </font></font></a>
+        </li>
+        <li>
+          <a href="#" class="nav-link link-dark">
+            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+            Клиенты
+          </font></font></a>
+        </li>
+      </ul>
+      <hr>
+      <div class="dropdown">
+        <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+          <strong><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">мдо</font></font></strong>
+        </a>
+        <ul class="dropdown-menu text-small shadow">
+          <li><a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Новый проект...</font></font></a></li>
+          <li><a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Настройки</font></font></a></li>
+          <li><a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Профиль</font></font></a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">выход</font></font></a></li>
+        </ul>
+      </div>
+      </div>
+      </div>
+      <div class="col-md-9" style="margin-left: 300px;">
+      <%= yield %>  
+      </div>
+    </div>
+
+
   </body>
 </html>
