--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -5,7 +5,6 @@
 <h1 class="header">Your Pragmatic Catalog</h1>
 
 <% @products.each do |product| %>
-  <div class="entry">
     <div class="row">
       <div class="col-md-auto">
         <%=  image_tag(product.image_url , class: "mage")%>
@@ -14,9 +13,8 @@
         <h3><%= product.title %></h3>
         <%= sanitize(product.description) %>
         <div class="price_line">
-          <span class="price"><p>Price: <%= product.price %></p> </span>
+          <span class="price"><p><%= number_to_currency(product.price) %></p> </span>
         </div>
       </div>
     </div>
-  </div>
 <% end %>
